# inside-box

./: .env.example  .gitignore  .prototools  README.md  WEBHOOK_API.md  final-booth.bat  index.html  package.json  pnpm-lock.yaml  production-booth.bat  run-booth.bat  tailwind.config.js  test.txt  tsconfig.json  vite.config.ts
scripts/: debug-from-json.cjs  debug-slots.cjs  output-06a.json  output-06b.json  output-06c.json  output-06d.json  output-06e.json  output-06f.json  output-06g.json  output-08a.json  preprocessing.cjs  scan-template.cjs
src/: App.css  App.tsx  main.tsx  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: database.rs  lib.rs  main.rs
src/components/: AdminPanel.tsx  Layout.tsx  StepArrange.tsx  StepCamera.tsx  StepConfirmation.tsx  StepPayment.tsx  StepReview.tsx  StepSelection.tsx
src/components/StepArrange/: ArrangeCanvas.tsx  BottomBar.tsx  DragAndPinchGuide.tsx  FilterSidebar.tsx  RemoteQRModal.tsx  SideMenu.tsx
src/components/StepCamera/: BottomBar.tsx  CameraControls.tsx  RemoteQRModal.tsx  Viewfinder.tsx
src/components/StepPayment/: CashPayment.tsx  InstructionsPopup.tsx  MethodSelector.tsx  QRISPayment.tsx
src/components/StepReview/: PhotoCard.tsx  ResultView.tsx  ReviewView.tsx
src/constants/: index.ts
src/context/: BoothContext.tsx
src/hooks/: useArrangeInteractions.ts  useBooth.ts  usePhotoBooth.tsx
src/services/: databaseService.ts  googleDriveService.ts  localStorageService.ts  templateService.ts  tourService.ts  tunnelService.ts
(+33 files in other folders)
