[package]
name = "inside-studio"
version = "0.1.0"
description = "Rua Rasa Photo Booth - A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ruarasa_booth_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
base64 = "0.22"
chrono = "0.4"
dirs = "5"
local-ip-address = "0.6"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.13.1", features = ["json"] }
